_posts/2025-07-05-Testing.md updated from https://stackedit.io/

--- a/_posts/2025-07-05-Testing.md
+++ b/_posts/2025-07-05-Testing.md
@@ -5,7 +5,7 @@ title: Testing
 
 A little more testing going on here...
 
-$$ \frac{1}{2} $$
+\[ \frac{1}{2} \]
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg4ODUyMTQ5NF19
+eyJoaXN0b3J5IjpbNjY2NDQ4NTA2LDE4ODg1MjE0OTRdfQ==
 -->
